--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -2,7 +2,7 @@
 \label{chapter:ERTMS}
 
 Following the successful use of the solid state interlocking for over 30 years railway engineers are  employing modern technologies to develop a new kind of train control system.  Technologies such as GPS and mobile data communications, in the form of GSM radio,  allow for  a much finer grain of control than the traditional discrete solid state interlocking and  boolean track circuits alone would allow. 
-This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with modern systems that can deal with more continuous. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. Each individual train has an onboard system which restricts its speed to follow this profile and ensures that the train will have braked and stopped before reaching the end of its movement authority. The on board system has an emergency braking mode incase one of these conditions is broken. The trains are free to move along the  track within their current MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of implementation (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however the interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system. An overview of the ERTMS system can be found in the ETCS implementation handbook \cite{ETCSHB} and an indepth description of the system can be found in the ETCS System Requirements Specification \cite{ETCSSRS}.
+This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with modern systems that can deal with more continuous. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. Each individual train has an onboard system which restricts its speed to follow this profile and ensures that the train will have braked and stopped before reaching the end of its movement authority. The on board system has an emergency braking mode incase one of these conditions is broken. The trains are free to move along the  track within their current MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of implementation (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via track-side balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however the interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system. An overview of the ERTMS system can be found in the ETCS implementation handbook \cite{ETCSHB} and an in-depth description of the system can be found in the ETCS System Requirements Specification \cite{ETCSSRS}.
 
 \afterpage{
 \begin{center}
@@ -200,7 +200,7 @@ Traditionally the speed limit along a segment of track was controlled by a combi
 \subsection*{ERTMS levels}
 ERTMS is seperated into different levels of implementation. These range from being a compliment to traditional signalling to a complete replacement. Currently both, level 1 and 2, have been implemented in different parts of the world and level 3 is still in the conceptual phase and has yet to be fully implemented anywhere in the world.
 
-\textbf{ERTMS Level 1:} (Figure \ref{fig:ERTMSLevel1}) Movement authorites are calculated based on the underlying signalling system and then transmitted from the trackside to the train through the use of an electronic beacon called an Eurobalise.  The Eurobalise also enables train detection at the trackside and passes relevant information regarding train movement via the landside equipment unit (LEU) to the interlocking and signalling centre. While this level makes use of an interlocking,  it does not make use of a radio block controller unlike later levels of ERTMS.  \\
+\textbf{ERTMS Level 1:} (Figure \ref{fig:ERTMSLevel1}) Movement authorities are calculated based on the underlying signalling system and then transmitted from the track-side to the train through the use of an electronic beacon called an Eurobalise.  The Eurobalise also enables train detection at the track-side and passes relevant information regarding train movement via the land-side equipment unit (LEU) to the interlocking and signalling centre. While this level makes use of an interlocking,  it does not make use of a radio block controller unlike later levels of ERTMS.  \\
 
 \begin{center}
 \begin{figure}[h!]
@@ -302,7 +302,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{figure}
 \end{center}
 
-\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to still run on the  track but coloured light signals can be removed if no such trains are running. Movement authorities are calculated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continuously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train, which in return provides its location relative to a given balise. This transmission is complemented by on-the-spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. 
+\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to still run on the  track but coloured light signals can be removed if no such trains are running. Movement authorities are calculated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continuously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train, which in return provides its location relative to a given balise. This transmission is complemented by on-the-spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the track-side using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. 
 
 
 
@@ -416,7 +416,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{center}
 
 
-\textbf{ERTMS Level 3:}  (Figure \ref{fig:ERTMSLevel3})  Instead of using the block system based on track circuits from previous levels, the train itself is considered a moving block.  Route locking and route releasing are performed by the radio block centre using information gathered from trains. Similarily to ERTMS Level 2 communication takes place via radio between the train and the radio block centre. Integrity checking is performed on board of the train as it continuously monitors its position along the track.
+\textbf{ERTMS Level 3:}  (Figure \ref{fig:ERTMSLevel3})  Instead of using the block system based on track circuits from previous levels, the train itself is considered a moving block.  Route locking and route releasing are performed by the radio block centre using information gathered from trains. Similarly to ERTMS Level 2 communication takes place via radio between the train and the radio block centre. Integrity checking is performed on board of the train as it continuously monitors its position along the track.
 
 
 
@@ -535,12 +535,12 @@ ERTMS is seperated into different levels of implementation. These range from bei
 
 
 \subsection*{An Informal Description of the Combined System}
-In the following we will present a high level description of the combined interlocking and radio block processor system. The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking.  These are two seperate control systems each with its method of communicating instructions to the train. The interlocking acts a small safety kernel in the traditional train control system which should also be the case in the combined system, it must have the final say on any instruction to the trains or railtrack. If this is not the case then we may end up in a situation where a train is in a safe position according to one system but not the other. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidance of a movment authority and is allowed to travel through an ordinary red light.  
+In the following we will present a high level description of the combined interlocking and radio block processor system. The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking.  These are two separate control systems each with its method of communicating instructions to the train. The interlocking acts a small safety kernel in the traditional train control system which should also be the case in the combined system, it must have the final say on any instruction to the trains or rail-track. If this is not the case then we may end up in a situation where a train is in a safe position according to one system but not the other. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidance of a movement authority and is allowed to travel through an ordinary red light.  
 
 
 
 
- The components of the system in which we are particularily interested to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking to the radio block processor. Some information does go in the other direction; for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However, other possibilities for a partition in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There are also different possibilities from the level of partitioning or integration of the system, it could be the case that a fully integrated system is much simplier, however such a system would have to be constructed from scratch. 
+ The components of the system in which we are particularly interested to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking to the radio block processor. Some information does go in the other direction; for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However, other possibilities for a partition in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There are also different possibilities from the level of partitioning or integration of the system, it could be the case that a fully integrated system is much simpler, however such a system would have to be constructed from scratch. 
 
 
 
@@ -618,7 +618,7 @@ In the following we will present a high level description of the combined interl
 
 
 \section{Typical  ERTMS Scenario}
-In the following we shall demonstrate, by the means of an example using a UML message sequence chart, of how ERTMS behaves in a typical railway scenario. It involves a track layout called a double junction in which two train tracks are joined to two other train tracks. This type of junction are common where you have two uni-directinal tracks. Trains wishing to leave the section of track can do so easily by travelling over a single point. The other line carrying trains wishing to join the track has to cross the near track with on coming trains before joining the far track. In particular we shall discuss the following scenario involving 3 trains attempting to cross a double junction (See Fig \ref{fig:trackplandd}). 
+In the following we shall demonstrate, by the means of an example using a UML message sequence chart, of how ERTMS behaves in a typical railway scenario. It involves a track layout called a double junction in which two train tracks are joined to two other train tracks. This type of junction are common where you have two uni-directional tracks. Trains wishing to leave the section of track can do so easily by travelling over a single point. The other line carrying trains wishing to join the track has to cross the near track with on coming trains before joining the far track. In particular we shall discuss the following scenario involving 3 trains attempting to cross a double junction (See Fig \ref{fig:trackplandd}). 
 
 \begin{itemize}
 \item Train 1 would like to travel in a route from D to C
@@ -755,7 +755,7 @@ We will assume that initially no routes are set. This means that either a contro
 \end{figure}
 
 \subsection*{Scenario Behaviour}
-We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See Fig \ref{fig:seqChart}) shall compliment this description by describing the communication sequence for the movement of the first two trains. Firstly the Radio Block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$, since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and trackside infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train then moves from $D \to C$, whilst continually transmitting its position to the RBC. Once this movement authority has been granted the RBC can then negotiate and grant another movement authority for train $2$ to move from $A \to B$ as its path does not cross that of train $1$. Once train $2$ has passed the second point on its journey  from $A \to B$ and train one has exited at $C$ , the RBC can negotiate and grant a movement authority for train $3$ to move from $F \to C$.
+We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See Fig \ref{fig:seqChart}) shall compliment this description by describing the communication sequence for the movement of the first two trains. Firstly the Radio Block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$, since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and track-side infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train then moves from $D \to C$, whilst continually transmitting its position to the RBC. Once this movement authority has been granted the RBC can then negotiate and grant another movement authority for train $2$ to move from $A \to B$ as its path does not cross that of train $1$. Once train $2$ has passed the second point on its journey  from $A \to B$ and train one has exited at $C$ , the RBC can negotiate and grant a movement authority for train $3$ to move from $F \to C$.
 \begin{figure} [h!]
 
 \begin{center}
