--- a/lit.bib
+++ b/lit.bib
@@ -731,6 +731,18 @@
   publisher = {Springer-Verlag}
 }
 
+@BOOK{SSD06,
+  title = {The Seventeen Provers of the World},
+  publisher = {Springer-Verlag},
+  year = {2006},
+  editor = {Wiedijk, F.},
+  author = {Foreword by Scott, D. S.},
+  volume = {3600},
+  series = {Lecture {N}otes in {A}rtificial {I}ntelligence},
+  owner = {andylawrence},
+  timestamp = {2014.08.07}
+}
+
 @INPROCEEDINGS{GF05,
   author = {Frehse, G.},
   title = {PHAVer: Algorithmic Verification of Hybrid Systems Past HyTech},
@@ -770,6 +782,18 @@
   pages = {68--131},
   owner = {csal},
   timestamp = {2014.03.11}
+}
+
+@ARTICLE{HG09,
+  author = {Geuvers, H.},
+  title = {Proof assistants: History, ideas and future},
+  journal = {Sadhana},
+  year = {2009},
+  volume = {34},
+  pages = {3--25},
+  number = {1},
+  owner = {andylawrence},
+  timestamp = {2014.08.07}
 }
 
 @ARTICLE{MG14,
