--- a/Introduction.tex
+++ b/Introduction.tex
@@ -54,18 +54,18 @@ The second result of this thesis is the modelling of the European Rail Traffic M
 \medskip \\ 
 \textbf{Chapter 6}: Describes an approach to extract a prototype conflict driven clause learning SAT algorithm by modifying the DPLL proof system.
 \medskip \\
-\textbf{Chapter 6}: Provides a general introduction to the traditional railway domain.
+\textbf{Chapter 7}: Provides a general introduction to the traditional railway domain.
 \medskip \\
-\textbf{Chapter 7}: Provides an overview of the model checking techniques used in this thesis for verification. \medskip \\
-\textbf{Chapter 8}: Compares X-SAT with another verified SAT algorithm and an industrial tool on pigeon hole formulae and on the real world application of verifying a solid state railway interlocking.
+\textbf{Chapter 8}: Provides an overview of the model checking techniques used in this thesis for verification. \medskip \\
+\textbf{Chapter 9}: Compares X-SAT with another verified SAT algorithm and an industrial tool on pigeon hole formulae and on the real world application of verifying a solid state railway interlocking.
 \medskip \\
-\textbf{Chapter 9}: Provides a description of the European Rail Traffic Management System
+\textbf{Chapter 10}: Provides a description of the European Rail Traffic Management System.
 \medskip \\
-\textbf{Chapter 10}: Describes the formalisation of the European Rail Traffic Management System as 3 hybrid automata. 
+\textbf{Chapter 11}: Describes the formalisation of the European Rail Traffic Management System as 3 hybrid automata. 
 \medskip \\
-\textbf{Chapter 11}: Describes how the European Rail Traffic Management System can be modelled as a Real Time Maude specification  specification. 
+\textbf{Chapter 12}: Describes how the European Rail Traffic Management System can be modelled as a Real Time Maude specification  specification. 
 \medskip \\
-\textbf{Chapter 12}: Validates the Real Time Maude specification of ERTMS using simulation via execution of the specification and describes the verification of the specification using the Maude LTL model checker.
+\textbf{Chapter 13}: Validates the Real Time Maude specification of ERTMS using simulation via execution of the specification and describes the verification of the specification using the Maude LTL model checker.
 
 
 \medskip
